feat: [PAGOPA-3210] Improve IssuerService code & constructor with bean