@@ -1,6 +1,5 @@
 package it.gov.pagopa.afm.calculator.service;
 
-import it.gov.pagopa.afm.calculator.config.CacheConfig;
 import it.gov.pagopa.afm.calculator.entity.PaymentType;
 import it.gov.pagopa.afm.calculator.entity.Touchpoint;
 import it.gov.pagopa.afm.calculator.entity.ValidBundle;
@@ -11,23 +10,26 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ConfigurationService {
+    private final ValidBundleRepository validBundleRepository;
+    private final TouchpointRepository touchpointRepository;
+    private final PaymentTypeRepository paymentTypeRepository;
+    private final IssuersService issuersService;
 
     @Autowired
-    ValidBundleRepository validBundleRepository;
-
-    @Autowired
-    TouchpointRepository touchpointRepository;
-
-    @Autowired
-    PaymentTypeRepository paymentTypeRepository;
-    @Autowired
-    IssuersService issuersService;
-    @Autowired
-    CacheConfig cacheConfig;
+    public ConfigurationService(
+            ValidBundleRepository validBundleRepository,
+            TouchpointRepository touchpointRepository,
+            PaymentTypeRepository paymentTypeRepository,
+            IssuersService issuersService
+    ) {
+        this.validBundleRepository = validBundleRepository;
+        this.touchpointRepository = touchpointRepository;
+        this.paymentTypeRepository = paymentTypeRepository;
+        this.issuersService = issuersService;
+    }
 
     public void addValidBundles(List<ValidBundle> validBundles) {
         validBundleRepository.saveAll(validBundles);
@@ -41,7 +43,7 @@ public class ConfigurationService {
         var filtered =
                 touchpoints.stream()
                         .filter(elem -> touchpointRepository.findByName(elem.getName()).isEmpty())
-                        .collect(Collectors.toList());
+                        .toList();
         touchpointRepository.saveAll(filtered);
     }
 
@@ -49,7 +51,7 @@ public class ConfigurationService {
         var filtered =
                 touchpoints.stream()
                         .filter(elem -> touchpointRepository.findById(elem.getId()).isPresent())
-                        .collect(Collectors.toList());
+                        .toList();
         touchpointRepository.deleteAll(filtered);
     }
 
@@ -57,7 +59,7 @@ public class ConfigurationService {
         var filtered =
                 paymentTypes.stream()
                         .filter(elem -> paymentTypeRepository.findByName(elem.getName()).isEmpty())
-                        .collect(Collectors.toList());
+                        .toList();
         paymentTypeRepository.saveAll(filtered);
     }
 
@@ -65,12 +67,12 @@ public class ConfigurationService {
         var filtered =
                 paymentTypes.stream()
                         .filter(elem -> paymentTypeRepository.findById(elem.getId()).isPresent())
-                        .collect(Collectors.toList());
+                        .toList();
         paymentTypeRepository.deleteAll(filtered);
     }
 
-    public void refreshIssuerRangeTableCache(){
-        cacheConfig.evictIssuerRangeTableCache();
+    public void refreshIssuerRangeTableCache() {
+        issuersService.evictIssuerRangeTableCache();
         issuersService.getIssuerRangeTableCached();
     }
 }
